[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["yuekseltoprak <yueksel.toprak@galexis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.2.2"
pylint = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
